# TrainingSM

./: Makefile.am  README.md
admin/: Makefile  adminLogin.cpp
app/: FacultyLogin.h  Makefile  adminLogin.h  main.cpp  test
faculty/: FacultyLogin.cpp  Makefile
include/: adminLogin.h
src/: FacultuLogin.cpp  adminLogin.cpp  main.cpp
