# Makefile.am
# Set the target executable name
bin_PROGRAMS = main

# Define the source files
myprogram_SOURCES = \
    src/FacultyLogin.cpp \
    src/adminLogin.cpp \
    src/main.cpp

# Define the header files to be included
myprogram_HEADERS = \
    include/FacultyLogin.h \
    include/adminLogin.h